[hat] Codegen refactored to use common macros for the OpenCL and CUDA backends